...
                        text = "Next",
                        modifier =
                            Modifier.width(Dimensions.ButtonWidth)
                                .height(Dimensions.ButtonHeight)
                                .align(Alignment.CenterHorizontally)
                                .background(brush = BlueGradient, shape = LeafShape)
                                .testTag("nextButton"))
                  }
            }
          } else {
            LazyColumn(
                modifier =
                    Modifier.fillMaxSize()
...
                          if (editing) {
                            navigationActions.goBack()
                          } else {
                            navigationActions.navigateTo(Screen.MAIN)
                          }
                        },
                        "saveButton")
                  }
                  item {
                    Spacer(modifier = Modifier.height(Dimensions.ExtraLargePadding))
                    // Delete button
                    if (editing) {
                      Button(
...
                                  .toString(),
                      onValueChange = {
                        val newValue = it.toIntOrNull()
                        exerciseDetail = ExerciseDetail.RepetitionBased(repetitions = newValue ?: 0)
                      },
                      label = { Text("Repetitions") },
                      modifier = Modifier.testTag("repetitionsTextField"))
                }
                else -> {}
              }
            }
          }
        },
...
                  showExerciseDialog = false
                  selectedExercise = null
                  selectedExerciseType = null
                  exerciseDetail = null
                }
              },
              modifier = Modifier.testTag("addExerciseConfirmButton")) {
                if (selectedExercise != null) {
                  Text("Update")
                } else {
                  Text("Add")
                }
              }
...
                  exerciseList.remove(selectedExercise!!)
                  showExerciseDialog = false
                  selectedExercise = null
                  selectedExerciseType = null
                  exerciseDetail = null
                },
                modifier = Modifier.testTag("deleteExerciseButton")) {
                  Text("Delete")
                }
          }
          Button(
              onClick = { showExerciseDialog = false },
              modifier = Modifier.testTag("addExerciseCancelButton")) {
...
