...
    viewModel: WorkoutViewModel<T>,
    navigationActions: NavigationActions
) {
  val profile = R.drawable.homme

  Scaffold(
      modifier = Modifier.testTag("WorkoutSelectionScreen"),
      topBar = { TopBar(navigationActions, R.string.WorkoutSelectionTitle) },
      content = { pd ->
        Column(modifier = Modifier.padding(pd)) {
          WorkoutList(
              viewModel = viewModel,
              navigationActions = navigationActions,
...
