...
        colors =
            CardDefaults.cardColors(
                containerColor = if (!summary) LightBlue2 else Transparent), // Blue color
        border = if (summary) BorderStroke(1.dp, LightBlue2) else null,
        modifier =
            Modifier.fillMaxWidth(0.9f)
                .testTag("exerciseCard")
                .padding(horizontal = 16.dp)
                .clickable { onCardClick() }) {
          Row(
              modifier = Modifier.padding(16.dp).fillMaxWidth(),
              verticalAlignment = Alignment.CenterVertically) {
                // Exercise name (on the left)
...
