...
      RoundedCornerShape(topStart = 15.dp, topEnd = 5.dp, bottomStart = 5.dp, bottomEnd = 15.dp)
  Row() {
    Spacer(modifier = Modifier.width(30.dp))
    Card(
        modifier =
            Modifier.padding(horizontal = 50.dp)
                .testTag("WorkoutCard")
                .clickable {
                  navigateToWorkoutScreen(
                      coloredWorkout.workout, coloredWorkout.viewModel, navigationActions)
                }
                .shadow(4.dp, shape = shape),
        colors = CardDefaults.cardColors(containerColor = coloredWorkout.backgroundColor),
...
